--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --watch --mode=development"
+    "start": "webpack --watch --mode=development",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,10 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/remm9/FoxeoFullstockProject/issues"
+  },
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.4.1"
   },
   "homepage": "https://github.com/remm9/FoxeoFullstockProject#readme"
 }
