--- a/test/fixtures/videos.yml
+++ b/test/fixtures/videos.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: videos
+#
+#  id                :bigint           not null, primary key
+#  video_title       :string           not null
+#  video_description :text             not null
+#  owner_id          :integer          not null
+#  created_at        :datetime         not null
+#  updated_at        :datetime         not null
+#
 
 one:
   video_title: MyString
