--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "babel-loader": "^8.1.0",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
