--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FoxeoFullstockProject",
+  "name": "Foxeo",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.10.2",
@@ -17,7 +17,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "webpack": "^4.43.0",
+    "serialize-javascript": ">=3.1.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.11"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
