--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Foxeo",
+  "name": "FoxeoFullstockProject",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.10.2",
@@ -19,7 +19,8 @@
     "redux-thunk": "^2.3.0",
     "serialize-javascript": ">=3.1.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "elliptic": ">=6.5.3"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
